syntax = "proto3";

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message AccountWithCashflows{
string acid = 1;
string foracid = 2;
string bacid = 3;
double clr_bal_amt = 4;
double un_clr_bal_amt = 5;
string sol_id = 6;
string cust_id = 7;
string acct_ownership = 8;
string ledg_num = 9;
string drwng_power = 10;
string mode_of_oper_code = 11;
double lien_amt = 12;
string sanct_lim = 13;
string gl_sub_head_code = 14;
string schm_code = 15;
string schm_type = 16;
string crncy_code = 17;
string acct_crncy_code = 18;
string acct_cls_flg = 19;
string del_flg = 20;
int64 acct_opn_date = 21;
string entity_cre_flg = 22;
int64 acct_cls_date = 23;
int64 last_tran_date = 24;
string notional_rate_code = 25;
string emp_id = 26;
double notional_rate = 27;
string limit_b2kid = 28;
string adim1_gam = 29;
int64 adim2_gam = 30;
int64 adim3_gam = 31;
double int_rate = 32;
string bm_id = 33;
double spread = 34;
string reprice_freq = 35;
int64 last_reprice_dt = 36;
int64 next_reprice_dt = 37;
string code1 = 38;
string code2 = 39;
string code3 = 40;
string code4 = 41;
string adim1_gac = 42;
string adim2_gac = 43;
string adim3_gac = 44;
string cust_name = 45;
string cmg_pan_gir_num = 46;
string cmg_cust_const = 47;
string adim1_cmg = 48;
string adim2_cmg = 49;
string adim3_cmg = 50;
double out_bal_amt = 51;
string cust_grp_id = 52;
string ucif_cust_const = 53;
string exch_rt = 54;
double out_bal_amt_con = 55;
string segment_code = 56;
string nfs = 57;
string oth_del_flg = 58;
int64 open_effective_date = 59;
string oth_schm_type = 60;
string int_tbl_code = 61;
int64 int_version = 62;
int64 int_tbl_ver_num = 63;
double min_int_pcnt_cr = 64;
double max_int_pcnt_cr = 65;
double cust_cr_pref_pcnt = 66;
double id_cr_pref_pcnt = 67;
double nrml_int_pcnt = 68;
double id_dr_pref_pcnt = 69;
string base_int_tbl_code = 70;
double base_pcnt_dr = 71;
double base_pcnt_cr = 72;
double base_pcnt = 73;
int64 deposit_period_mths = 74;
int64 deposit_period_days = 75;
double deposit_amount = 76;
string oth_acct_crncy_code = 77;
string deposit_type = 78;
string spl_catg_ind = 79;
double nrml_int_pcnt_cr = 80;
string base_differential_exists = 81;
string deposit_status = 82;
double maturity_amount = 83;
int64 maturity_date = 84;
int64 rcre_time = 85;
string auto_renewed_counter = 86;
string overdue_flg = 87;
double final_int_rate = 88;
string source_name = 89;
repeated Cashflow cashflows=90;
}
