syntax = "proto3"; 

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message AccountWithCashflows{ 
int64 as_on=1;
string acc_no=2;
string cust_name=3;
string client_id=4;
double tl_limit=5;
double ccod_limit=6;
double pbg_limit=7;
double fbg_limit=8;
double loc_limit=9;
double bliab_bill_limit=10;
double tl_blnc=11;
double ccod_blnc=12;
double pbg_blnc=13;
double fbg_blnc=14;
double loc_blnc=15;
double bliab_bill_blnc=16;
double tl_ualimit=17;
double ccod_ualimit=18;
double pbg_ualimit=19;
double fbg_ualimit=20;
double loc_ualimit=21;
double bliab_bill_ualimit=22;
double tl_dep=23;
double ccod_dep=24;
double pbg_dep=25;
double fbg_dep=26;
double loc_dep=27;
double bliab_bill_dep=28;
double tl_cr_eq=29;
double ccod_cr_eq=30;
double pbg_cr_eq=31;
double fbg_cr_eq=32;
double loc_cr_eq=33;
double bliab_bill_cr_eq=34;
string client_type_ip=35;
string ext_rating=36;
string asset_code=37;
int64 bsr=38;
string ccy=39;
string client_type=40;
string clients_name=41;
string clients_bsr_type_flg=42;
string clients_busdivn_code=43;
string clients_const_code=44;
string clients_pan_gir_num=45;
string clients_risk_categorization=46;
string clients_risk_cntry=47;
string clients_segment_code=48;
string corpcl_orgn_qualifier=49;
string corpcl_indus_code=50;
string corpcl_nature_of_bus1=51;
string corpcl_nature_of_bus2=52;
string corpcl_nature_of_bus3=53;
string corpcl_central_state_flg=54;
string corpcl_public_sector_flg=55;
string corpcl_primary_dlr_flg=56;
string corpcl_multilateral_bank=57;
string corpcl_connp_inv_num=58;
double corpcl_bc_gross_turnover=59;
double ccod_undrawn_lcr=60;
double ccod_und_nsfr=61;
double care_funded=62;
double care_lcbg=63;
int64 sanc_dt=64;
string occp_cd=65;
string sens_sec=66;
string prior_subtype=67;
string restruct_flag=68;
int64 restruct_dt=69;
string mor_prd=70;
string rating=71;
string consitin=72;
string pan=73;
double limit_amt=74;
double gross_adv=75;
double exp_amt=76;
double unvail_amt=77;
double gold_gram=78;
string fund_flag=79;
double ltv_value=80;
int64 pt_i64_1=81;
int64 pt_i64_2=82;
int64 pt_i64_3=83;
int64 pt_i64_4=84;
int64 pt_i64_5=85;
double pt_f64_1=86;
double pt_f64_2=87;
double pt_f64_3=88;
double pt_f64_4=89;
double pt_f64_5=90;
string pt_str_1=91;
string pt_str_2=92;
string pt_str_3=93;
string pt_str_4=94;
string pt_str_5=95;
int64 maturity_dt=96;
double ccod_tl_limit=97;
double total_principal_amount = 98;
double total_interest_amount = 99;
repeated Cashflow cashflows=100;
}
